// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag component Should be Large 1`] = `
<span
  className="tag is-large"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    Tag Large
  </span>
</span>
`;

exports[`Tag component Should be group tags 1`] = `
<span
  className="tags has-addons"
  style={Object {}}
>
  <span
    className="tag"
    onClick={false}
    style={Object {}}
  >
    <span
      className=""
    >
      Tag 1
    </span>
  </span>
  <span
    className="tag"
    onClick={false}
    style={Object {}}
  >
    <span
      className=""
    >
      Tag 2
    </span>
  </span>
</span>
`;

exports[`Tag component Should concat classname in props with Bulma classname 1`] = `
<span
  className="tag other-class this-is-a-test"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    Tag name
  </span>
</span>
`;

exports[`Tag component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Group": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "backgroundColor": null,
      "children": null,
      "className": "",
      "clearfix": false,
      "clipped": false,
      "gapless": false,
      "hidden": false,
      "invisible": false,
      "italic": false,
      "marginless": false,
      "overlay": false,
      "paddingless": false,
      "pull": null,
      "radiusless": false,
      "responsive": undefined,
      "shadowless": false,
      "style": Object {},
      "textAlignment": null,
      "textColor": null,
      "textSize": null,
      "textTransform": null,
      "textWeight": null,
      "unselectable": false,
    },
    "propTypes": Object {
      "backgroundColor": [Function],
      "children": [Function],
      "className": [Function],
      "clearfix": [Function],
      "clipped": [Function],
      "gapless": [Function],
      "hidden": [Function],
      "invisible": [Function],
      "italic": [Function],
      "marginless": [Function],
      "overlay": [Function],
      "paddingless": [Function],
      "pull": [Function],
      "radiusless": [Function],
      "responsive": [Function],
      "shadowless": [Function],
      "style": [Function],
      "textAlignment": [Function],
      "textColor": [Function],
      "textSize": [Function],
      "textTransform": [Function],
      "textWeight": [Function],
      "unselectable": [Function],
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "close": false,
    "color": null,
    "ellipsis": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "onClick": [Function],
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "remove": false,
    "renderAs": "span",
    "responsive": undefined,
    "rounded": false,
    "shadowless": false,
    "size": null,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "close": [Function],
    "color": [Function],
    "ellipsis": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "onClick": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "remove": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "rounded": [Function],
    "shadowless": [Function],
    "size": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Tag component Should expose Tag Group 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "gapless": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "responsive": undefined,
    "shadowless": false,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "gapless": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Tag component Should have tag classname 1`] = `
<span
  className="tag"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    Tag name
  </span>
</span>
`;

exports[`Tag component Should use inline styles 1`] = `
<span
  className="tag"
  onClick={false}
  style={
    Object {
      "width": 250,
    }
  }
>
  <span
    className=""
  >
    Tag name
  </span>
</span>
`;

exports[`Tag component Should use use color black 1`] = `
<span
  className="tag is-black"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    black
  </span>
</span>
`;

exports[`Tag component Should use use color danger 1`] = `
<span
  className="tag is-danger"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    danger
  </span>
</span>
`;

exports[`Tag component Should use use color dark 1`] = `
<span
  className="tag is-dark"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    dark
  </span>
</span>
`;

exports[`Tag component Should use use color info 1`] = `
<span
  className="tag is-info"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    info
  </span>
</span>
`;

exports[`Tag component Should use use color light 1`] = `
<span
  className="tag is-light"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    light
  </span>
</span>
`;

exports[`Tag component Should use use color link 1`] = `
<span
  className="tag is-link"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    link
  </span>
</span>
`;

exports[`Tag component Should use use color null 1`] = `
<span
  className="tag"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
  </span>
</span>
`;

exports[`Tag component Should use use color primary 1`] = `
<span
  className="tag is-primary"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    primary
  </span>
</span>
`;

exports[`Tag component Should use use color success 1`] = `
<span
  className="tag is-success"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    success
  </span>
</span>
`;

exports[`Tag component Should use use color warning 1`] = `
<span
  className="tag is-warning"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    warning
  </span>
</span>
`;

exports[`Tag component Should use use color white 1`] = `
<span
  className="tag is-white"
  onClick={false}
  style={Object {}}
>
  <span
    className=""
  >
    tag
    white
  </span>
</span>
`;
